--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
     </header>
-    <!-- <div class="about">
+    <div class="about">
         <div class="sub-about">
             <div class="sub-about-image">
                 <img src="images/man-2.png"></img>
@@ -124,7 +124,7 @@
             <li><ion-icon name="logo-github"></ion-icon></li>
         </ul>
         <p>copyright © 2023 | All rights reserved.</p>
-    </footer> -->
+    </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
