--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Portfolio</title>
-    <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -28,7 +30,8 @@
             <div class="sub-hero-text">
                 <h5>Shivam Kumar</h5>
                 <h1>I'm a Creative <br><span>Web Designer</span></h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius autem quis excepturi aspernatur sequi, ex voluptas commodi fuga. Temporibus, Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum recusandae excepturi voluptate quia vitae quos, quibusdam aspernatur debitis labore hic?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius autem quis excepturi aspernatur sequi, ex voluptas commodi fuga. Temporibus, Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum recusandae excepturi voluptate
+                    quia vitae quos, quibusdam aspernatur debitis labore hic?</p>
                 <button><a href="#">Download CV</a></button>
             </div>
         </div>
@@ -41,12 +44,21 @@
             <div class="sub-about-text">
                 <h5>About <span>Me</span></h5>
                 <h6>Hello! I'm Shivam Kumar</h6>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis non magnam consequuntur nisi soluta, iure, perspiciatis, et perferendis vitae quas cumque? Itaque exercitationem natus eaque dignissimos ipsam fuga distinctio molestiae pariatur autem in qui facere, ullam asperiores? Consectetur obcaecati perferendis magnam exercitationem minima praesentium, ut facilis. Porro ipsa magnam eos.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis non magnam consequuntur nisi soluta, iure, perspiciatis, et perferendis vitae quas cumque? Itaque exercitationem natus eaque dignissimos ipsam fuga distinctio molestiae pariatur
+                    autem in qui facere, ullam asperiores? Consectetur obcaecati perferendis magnam exercitationem minima praesentium, ut facilis. Porro ipsa magnam eos.</p>
                 <ul>
-                    <li><ion-icon name="logo-facebook"></ion-icon></li>
-                    <li><ion-icon name="logo-instagram"></ion-icon></li>
-                    <li><ion-icon name="logo-twitter"></ion-icon></li>
-                    <li><ion-icon name="logo-github"></ion-icon></li>
+                    <li>
+                        <ion-icon name="logo-facebook"></ion-icon>
+                    </li>
+                    <li>
+                        <ion-icon name="logo-instagram"></ion-icon>
+                    </li>
+                    <li>
+                        <ion-icon name="logo-twitter"></ion-icon>
+                    </li>
+                    <li>
+                        <ion-icon name="logo-github"></ion-icon>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -56,37 +68,37 @@
         <h1>Our <span>Services</span></h1>
         <p>We provide high standard website for your business solution</p>
         <div id="services">
-        <div class="sub-services">
-            <ion-icon name="brush-outline"></ion-icon>
-            <h1>Graphic Designer</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aliquam perferendis, dolorem perspiciatis eaque soluta quam eius laudantium amet animi.</p>
+            <div class="sub-services">
+                <ion-icon name="brush-outline"></ion-icon>
+                <h1>Graphic Designer</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aliquam perferendis, dolorem perspiciatis eaque soluta quam eius laudantium amet animi.</p>
+            </div>
+            <div class="sub-services">
+                <ion-icon name="code-slash-outline"></ion-icon>
+                <h1>Web Developer</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aliquam perferendis, dolorem perspiciatis eaque soluta quam eius laudantium amet animi.</p>
+            </div>
+            <div class="sub-services">
+                <ion-icon name="briefcase-outline"></ion-icon>
+                <h1>Meida Marketing</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aliquam perferendis, dolorem perspiciatis eaque soluta quam eius laudantium amet animi.</p>
+            </div>
+            <div class="sub-services">
+                <ion-icon name="desktop-outline"></ion-icon>
+                <h1>Web Design</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aliquam perferendis, dolorem perspiciatis eaque soluta quam eius laudantium amet animi.</p>
+            </div>
+            <div class="sub-services">
+                <ion-icon name="film-outline"></ion-icon>
+                <h1>Motion Graphic</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aliquam perferendis, dolorem perspiciatis eaque soluta quam eius laudantium amet animi.</p>
+            </div>
+            <div class="sub-services">
+                <ion-icon name="phone-portrait-outline"></ion-icon>
+                <h1>Apps</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aliquam perferendis, dolorem perspiciatis eaque soluta quam eius laudantium amet animi.</p>
+            </div>
         </div>
-        <div class="sub-services">
-            <ion-icon name="code-slash-outline"></ion-icon>
-            <h1>Web Developer</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aliquam perferendis, dolorem perspiciatis eaque soluta quam eius laudantium amet animi.</p>
-        </div>
-        <div class="sub-services">
-            <ion-icon name="briefcase-outline"></ion-icon>
-            <h1>Meida Marketing</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aliquam perferendis, dolorem perspiciatis eaque soluta quam eius laudantium amet animi.</p>
-        </div>
-        <div class="sub-services">
-            <ion-icon name="desktop-outline"></ion-icon>
-            <h1>Web Design</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aliquam perferendis, dolorem perspiciatis eaque soluta quam eius laudantium amet animi.</p>
-        </div>
-        <div class="sub-services">
-            <ion-icon name="film-outline"></ion-icon>
-            <h1>Motion Graphic</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aliquam perferendis, dolorem perspiciatis eaque soluta quam eius laudantium amet animi.</p>
-        </div>
-        <div class="sub-services">
-            <ion-icon name="phone-portrait-outline"></ion-icon>
-            <h1>Apps</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aliquam perferendis, dolorem perspiciatis eaque soluta quam eius laudantium amet animi.</p>
-        </div>
-    </div>
     </div>
     <div class="freelancer">
         <h1>I am available for Freelancer.</h1>
@@ -97,38 +109,47 @@
         <h1>Contact <span>Us</span></h1>
         <p>Feel free to contact us for any query</p>
         <div id="contact">
-        <div class="sub-contact">
-            <ion-icon name="call-outline"></ion-icon>
-            <h5>Call us on</h5>
-            <p>+91 - 9xxxxxxxxx</p>
-        </div>
-        <div class="sub-contact">
-            <ion-icon name="mail-unread-outline"></ion-icon>
-            <h5>Email us at</h5>
-            <p>info@example.com</p>
-        </div>
-        <div class="sub-contact">
-            <ion-icon name="map-outline"></ion-icon>
-            <h5>Reach us at</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur</p>
-        </div>
+            <div class="sub-contact">
+                <ion-icon name="call-outline"></ion-icon>
+                <h5>Call us on</h5>
+                <p>+91 - 9xxxxxxxxx</p>
+            </div>
+            <div class="sub-contact">
+                <ion-icon name="mail-unread-outline"></ion-icon>
+                <h5>Email us at</h5>
+                <p>info@example.com</p>
+            </div>
+            <div class="sub-contact">
+                <ion-icon name="map-outline"></ion-icon>
+                <h5>Reach us at</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur</p>
+            </div>
         </div>
     </div>
-    
+
     <footer>
         <img src="images/logo.png">
         <ul>
-            <li><ion-icon name="logo-facebook"></ion-icon></li>
-            <li><ion-icon name="logo-instagram"></ion-icon></li>
-            <li><ion-icon name="logo-twitter"></ion-icon></li>
-            <li><ion-icon name="logo-github"></ion-icon></li>
+            <li>
+                <ion-icon name="logo-facebook"></ion-icon>
+            </li>
+            <li>
+                <ion-icon name="logo-instagram"></ion-icon>
+            </li>
+            <li>
+                <ion-icon name="logo-twitter"></ion-icon>
+            </li>
+            <li>
+                <ion-icon name="logo-github"></ion-icon>
+            </li>
         </ul>
         <p>copyright © 2023 | All rights reserved.</p>
     </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    
+
     <script src="js/app.js"></script>
 </body>
+
 </html>
